# SNiFi

./: .gitattributes  .gitignore  README.md  docker-compose.yaml  readme.md  setup.py
backend/: Dockerfile  README.md  app.py  docker-compose.yaml  readme.md  requirements.txt
backend/adg/confdir/: AdGuardHome.yaml
backend/daemon/: device_daemon.py  discovery_daemon.py  nmap_daemon.py  notification_daemon.py
backend/schedulers/: adg_report_worker.py  scheduler_manager.py
backend/util/: iputil.py
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: apiMocks.ts
frontend/src/hooks/: useAlert.tsx
frontend/src/routes/: RouterContainer.tsx
frontend/src/styles/: breakpoints.ts  global.ts  index.css  typography.ts
frontend/src/utils/: date.ts
hardware/: README.md  SnifiCase.3mf  SnifiLid.3mf
ml/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  auto_processor.py  pyproject.toml  requirements.txt  start.sh
ml/config/: __init__.py  config.yaml
ml/ml/: data_handling.py  prepare_subset.py  train_smote.py
ml/models/: RF_model_v1.1.0.pkl  feature_columns.pkl  logistic_regression_model_v1.0.0.pkl  scaler.pkl  svm_bagging_model-v1.0.0.pkl
ml/notebooks/: SVM.ipynb  data_analysis.ipynb  logistic_regression.ipynb  random_forest.ipynb  random_forest_SMOTE.ipynb
ml/utils/: communication_features.py  connectivity_features.py  dynamic_features.py  feature_extraction.py  supporting_functions.py
(+79 files in other folders)
