[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["KDAW <kacdaw@st.amu.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
pytest = "^8.1.1"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.1"
fastparquet = "^2024.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
plotly = "^5.20.0"
imblearn = "^0.0"
pyyaml = "^6.0.1"
flask = "^3.0.3"
pymongo = "^4.7.2"
flask-restful = "^0.3.10"
dpkt = "^1.9.8"
scapy = "^2.5.0"
flasgger = "^0.9.7.1"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
flask-cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
